--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- 全国344个市、区、州对应的数字编号 -->
 	<script type="text/javascript" src="static/js/citymap.js"></script>
 </head>
-<body>
+<body style="background: url('static/img/bg.jpg') no-repeat;overflow:hidden;">
 <div id="main" style="width: 100%;height:760px;"></div>
 <script type="text/javascript" src="static/js/jquery.min.js"></script>
 <script type="text/javascript" src="static/js/app.js"></script>
